# src/api/BaseDock.Application/Features/Users/Commands/DeleteUser/DeleteUserCommand.cs
@@ -1,0 +1,6 @@
+namespace BaseDock.Application.Features.Users.Commands.DeleteUser;
+
+using BaseDock.Application.Abstractions.Messaging;
+using BaseDock.Domain.Primitives;
+
+public sealed record DeleteUserCommand(Guid UserId) : ICommand<Result>;
